@@ -6,6 +6,7 @@ This file documents the major additions and syntax changes between releases.
 	  is now deprecated. See --help for further information.
 	Check_disk now calls stat() on all filesystems to check. (Old: only the ones selected using -p) 
 	  A meaningful error message (eg "Stale NFS Handle") is printed if stat fails.
+	Check_disk's --help now prints some examples for the new features introduced in 1.4.8
 
 1.4.9 4th June 2006
 	Inclusion of contrib/check_cluster2 as check_cluster with some improvements
